--- a/app/src/main/res/layout/activity_tp6_part2.xml
+++ b/app/src/main/res/layout/activity_tp6_part2.xml
@@ -6,36 +6,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <Button
         android:id="@+id/button"
         android:layout_width="296dp"
         android:layout_height="81dp"
         android:layout_gravity="center"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="84dp"
+
         android:backgroundTint="#E3ED7B"
         android:text="Visualiser les taches "
         android:textColor="@color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:cornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="#969498"
         app:strokeWidth="5dp" />
+
     <ListView
         android:id="@+id/listView"
-        android:layout_width="270dp"
-        android:layout_height="364dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="30dp"
         android:background="#CEF3F0"
         android:textColor="#009688"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toTopOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
         app:strokeColor="#969498"
         app:strokeWidth="5dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
